@@ -1,3 +1,9 @@
+2007-04-06  Matt Thomas  <matt@netbsd.org>
+
+	* config/tc-vax.c (vax_cons): Added to support %pcrel{8,16,32}(exp)
+	to emit pcrel relocations by DWARF2 in non-code sections.  Borrowed
+	heavily from tc-sparc.c.  (vax_cons_fix_new): Likewise.
+
 2007-04-04  Kazu Hirata  <kazu@codesourcery.com>
 
 	* config/tc-m68k.c (HAVE_LONG_BRANCH): Add fido_a.
